<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/Royal_Blue"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="7dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/appointment"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/appointmentIDText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/patient_id"/>

        <TextView
            android:id="@+id/appointmentPatientNameText"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:text="@string/patient_name_and_surname"/>

        <TextView
            android:id="@+id/appointmentDoctorNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/doctor_s_name"/>

        <TextView
            android:id="@+id/appointmentDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/appointment_date"/>


    </androidx.cardview.widget.CardView>
</LinearLayout>