<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="#3EB489"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_margin="10dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/appointment"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appointmentHistoryPatientID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/patient_id"/>

            <TextView
                android:id="@+id/appointmentHistoryPatientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/patient_name_and_surname"/>

            <TextView
                android:id="@+id/appointmentHistoryDoctorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/doctor_s_name"/>

            <TextView
                android:id="@+id/appointmentHistoryAppointmentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/appointment_date"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>