<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#212F3D"
    android:layout_height="match_parent"
    tools:context=".ClinicLoginTabFragments.SecretaryLoginFragment">

    <EditText
        android:id="@+id/secretaryIdEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:textColor="@color/white"
        android:background="@drawable/edittext_bg"
        android:layout_marginStart="20dp"
        android:textColorHint="@color/white"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="8dp"
        android:paddingStart="12dp"
        android:hint="@string/secretary_id"/>

    <EditText
        android:id="@+id/secretaryPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:drawableStart="@drawable/ic_baseline_lock"
        android:drawablePadding="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/secretaryLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginEnd="70dp"
        android:background="@drawable/start_screen_bg"
        android:backgroundTint="#FFC107"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>