<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212F3D"
    tools:context=".View.PatientLoginActivity">

    <ImageView
        android:onClick="goBackPatientBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_back"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/patientlogin"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/patientIdEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:textColor="@color/white"
        android:background="@drawable/edittext_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="8dp"
        android:textColorHint="@color/white"
        android:paddingStart="12dp"
        android:hint="@string/patient_id"/>

    <EditText
        android:id="@+id/patientPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_baseline_lock"
        android:drawablePadding="8dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:background="@drawable/edittext_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="patientLoginClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginEnd="70dp"
        android:background="@drawable/start_screen_bg"
        android:backgroundTint="#8BC34A"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>