<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3EB489"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_person"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginStart="70dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/checkPatientIDText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_id"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/checkPatientNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_name_and_surname"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/checkPatientDoctorIDText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doctor_id"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/checkAppointmentDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appointment_date"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/acceptAppointmentBtn"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:text="Accept"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@drawable/edittext_bg" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/rejectAppointmentBtn"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:text="Reject"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:background="@drawable/edittext_bg" />
            </LinearLayout>
        </LinearLayout>




    </androidx.cardview.widget.CardView>

</LinearLayout>